# Spotify-Algorythmus

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  api.py  config.py  db.py  e2e_smoke.py  main.py  models.py  probe_sources.py  schemas.py  seed.py  serializers.py  worker.py
backend/app/integrations/: lastfm.py  musicdata.py  spotify.py
backend/app/services/: camelot.py  crypto.py  intents.py  listening.py  profiles.py  publishing.py  recommender.py  sync.py
backend/resonanz_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_algorithm.py  test_integrations.py  test_product_rules.py
frontend/: components.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AppShell.tsx  GeneratorCard.tsx  InsightsPanel.tsx  PlaylistTable.tsx  SystemPanel.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  textarea.tsx
scripts/: check.ps1  start.ps1
