[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "resonanz-backend"
version = "0.1.0"
description = "Persoenlicher KI-Musikassistent"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "apscheduler>=3.11,<4",
  "cryptography>=44,<46",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "openai>=1.66,<2",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.8,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "respx>=0.22,<1",
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/api.py" = ["B008"]
